@@ -1,0 +1,33 @@
+#! @SH@
+#
+# -*-sh-mode-*-
+#
+#     Copyright (C) 2000      Ross Campbell <rcampbel@us.oracle.com>
+#     Copyright (C) 2000-2016 Roland Rosenfeld <roland@spinnaker.de>
+#     Copyright (C) 2012      Alfredo Finelli <0x4146@gmail.com>
+#     Copyright (C) 2016      François Charlier <fcharlier@ploup.net>
+#
+#     This program is free software; you can redistribute it and/or modify
+#     it under the terms of the GNU General Public License as published by
+#     the Free Software Foundation; either version 2 of the License, or
+#     (at your option) any later version.
+#
+#     This program is distributed in the hope that it will be useful,
+#     but WITHOUT ANY WARRANTY; without even the implied warranty of
+#     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#     GNU General Public License for more details.
+#
+#     You should have received a copy of the GNU General Public License
+#     along with this program; if not, write to the Free Software Foundation,
+#     Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301,, USA.
+
+m_goobook_query()
+{
+    GOOBOOK=@GOOBOOK@
+
+    if [ -x "$GOOBOOK" ]		# check whether goobook in installed
+    then
+        $GOOBOOK query "$@" \
+            | sed -e '1d;s/\([^\t]*\t[^\t]*\).*/\1\tgoobook/'
+    fi
+}
