@@ -14,8 +14,10 @@ lbdb (0.42) unstable; urgency=medium
   * Allow one to remove outdated or infrequently used entries from m_inmail.
     Thanks to Yaroslav Halchenko for providing a patch (Closes: #406232).
   * Upgrade to Standards-Version 3.9.8 (no changes).
+  * Add new module m_goobook, which reads addresses from Google contacts
+    using goobook package.  Thanks for providing this to François Charlier.
 
- -- Roland Rosenfeld <roland@debian.org>  Sun, 25 Sep 2016 19:34:17 +0200
+ -- Roland Rosenfeld <roland@debian.org>  Mon, 07 Nov 2016 13:27:44 +0100
 
 lbdb (0.41) unstable; urgency=medium
 
